fix button alignment

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
 
 #snow-question {
     margin-bottom: 30px;
-    padding: 15px 40px;
+    padding: 20px 40px;
     font-size: 1.2em;
     border: none;
     border-radius: 50px;
